@@ -1,6 +1,6 @@
 PREFIX=$(HOME)/usr
 PROJNAME=zeo
-VERSION=1.10.16
+VERSION=1.10.17
 
 DEPENDENCY="zeda=1.6.30;zm=1.4.10"
 
